# gis-dashboard-dt-django

./: .env.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  main.py  pyproject.toml
apps/accounts/: auth.py  forms.py  tests.py  urls.py  views.py
apps/audit/: admin.py  apps.py  formatters.py  signals.py  tests.py  utils.py
apps/authorization/: admin.py  apps.py  context_processors.py  decorators.py  middleware.py  models.py  tests.py
apps/core/: tests.py  urls.py  views.py
apps/core/services/: arcgis.py  (+1 more)
apps/profiles/: urls.py  views.py
apps/reports/: api_urls.py  mappings.py  tests.py  urls.py
apps/segnalazioni/: api_urls.py  apps.py  urls.py
config/: context_processors.py  middleware.py  settings.py  strings.py  tests.py  urls.py
docker/app/: Dockerfile  gunicorn.conf.py
docker/nginx/: Dockerfile  nginx.conf
docs/: SDD-production-environment.md
docs/plans/: 2026-02-13-profile-page-styling-design.md  2026-02-13-profile-page-styling.md  2026-02-27-azure_auth_integration.md  2026-03-06-claude-authorization-instructions.md  2026-03-11-segnalazioni-plan-design.md  2026-03-13-replace-hardcoded-arcgis-metadata.md
docs/vilnerability/: vulnearbility-scan.md
static/css/: base.css  login.css  style.css
static/js/: app.js  filter-manager.js  pdf-download.js  report-list.js  segnalazioni-list.js  sidebar.js  table-sorter.js
templates/: base.html
templates/accounts/: login.html
templates/core/: home.html
templates/includes/: sidebar.html
templates/profiles/: profile.html
templates/reports/: report_detail.html  report_list.html  report_pdf.html
(+24 files in other folders)
