[project]
name = "gis-dashboard-dt-parent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "django-extensions>=4.1",
    "django-sslserver>=0.22",
    "mozilla-django-oidc>=5.0.2",
    "pillow>=11.0.0",
    "pyopenssl>=25.3.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "truststore>=0.10.4",
    "werkzeug>=3.1.6",
    "xhtml2pdf>=0.2.16",
]

[tool.uv]
native-tls = true
